# IR-Sensor-Simulation-Engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cuda/: atm_lut.cu  gpu_types.cuh  mtf_kernel.cu  planck_kernel.cu  radiance_kernel.cu  sensor_model.cu  thermal_solver.cu
data/: material_database.yaml
include/: ir_engine.h  ir_sensor_plugin.h  material_db.h  sensor_params.h
scripts/: validate_thermal.py
shaders/: gbuffer.frag  gbuffer.vert  ir_display.frag  ir_display.vert
src/: ir_engine.cpp  ir_plugin_api.cpp  main.cpp  material_db.cpp
tests/: test_physics.cpp
